syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option go_package = "backend/contracts";

message File {
  enum FileType {
    FILE_TYPE_UNSPECIFIED = 0;
    FILE_TYPE_FILE = 1;
    FILE_TYPE_DIR = 2;
  }
  FileType file_type = 1;
  string name = 2;
  string path = 3;
  int32 size = 4;
  google.protobuf.Timestamp created_at = 5;
}

message LsRequest { string location = 1; }

message LsResponse {
  string location = 1;
  repeated File files = 2;
}

service Explorer {
  rpc Ls(LsRequest) returns (LsResponse);
  rpc TimeStream(google.protobuf.Empty) returns (stream google.protobuf.Timestamp);
}
